--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
+NODE_ENV=development
 PORT=3000
-MONGODB_URI=mongodb://localhost:27017/e-learning-platform
-JWT_SECRET=your_jwt_secret_key_here
-JWT_EXPIRE=30d
+MONGODB_URI=MONGODB_URI=mongodb://localhost:27017/e-learning-platform
+JWT_SECRET=your_secure_jwt_secret
+JWT_EXPIRE=1h
+REFRESH_TOKEN_SECRET=your_secure_refresh_token_secret
+REFRESH_TOKEN_EXPIRE=7d
