Fix MONGODB_URI formatting in .env file to remove duplicate prefix, ensuring correct database connection string.

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=3000
-MONGODB_URI=MONGODB_URI=mongodb://localhost:27017/e-learning-platform
+MONGODB_URI=mongodb://localhost:27017/e-learning-platform
 JWT_SECRET=your_secure_jwt_secret
 JWT_EXPIRE=1h
 REFRESH_TOKEN_SECRET=your_secure_refresh_token_secret
