--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Backend for E-Learning Platform",
   "main": "server.js",
+
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
@@ -24,5 +25,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
-  }
+  },
+ "engines": {
+  "node": "18.x"
+}
 }
