--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-NODE_ENV=development
+# NODE_ENV=development
+NODE_ENV = producton
 PORT=3000
-MONGODB_URI=mongodb://localhost:27017/e-learning-platform
+# MONGODB_URI=mongodb://localhost:27017/e-learning-platform
+MONGODB_URI = mongodb+srv://abenooo:IV0WRDceRqB1JCAZ@cluster0.znijpfk.mongodb.net/
 JWT_SECRET=your_secure_jwt_secret
 JWT_EXPIRE=1h
 REFRESH_TOKEN_SECRET=your_secure_refresh_token_secret
