--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-# NODE_ENV=development
-NODE_ENV = producton
+NODE_ENV=production
 PORT=3000
-# MONGODB_URI=mongodb://localhost:27017/e-learning-platform
+MONGODB_URI=mongodb+srv://abenooo:password@cluster0.znijpfk.mongodb.net/
 MONGODB_URI = mongodb+srv://abenooo:IV0WRDceRqB1JCAZ@cluster0.znijpfk.mongodb.net/
 JWT_SECRET=your_secure_jwt_secret
 JWT_EXPIRE=1h
