--- a/package.json
+++ b/package.json
@@ -7,25 +7,26 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed": "node scripts/seed.js",
-    "build": "npm install"
+    "build": "npm ci",
+    "clean-install": "rm -rf node_modules && rm -f package-lock.json && npm install"
   },
   "dependencies": {
-    "bcryptjs": "2.4.3",
-    "cors": "2.8.5",
-    "debug": "4.3.4",
-    "dotenv": "16.5.0",
-    "express": "4.18.2",
-    "express-validator": "7.0.1",
-    "jsonwebtoken": "9.0.2",
-    "mongoose": "6.11.3",
-    "morgan": "1.10.0",
-    "multer": "1.4.5-lts.1",
-    "socket.io": "4.8.1",
-    "swagger-jsdoc": "6.2.8",
-    "swagger-ui-express": "5.0.1"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "debug": "^4.3.4",
+    "dotenv": "^16.5.0",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^6.11.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "nodemon": "3.0.2"
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": "18.x",
