Update MongoDB URI in .env file for production environment to include database name and connection options.

--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 NODE_ENV=production
 PORT=3000
-MONGODB_URI=mongodb+srv://abenooo:password@cluster0.znijpfk.mongodb.net/
-MONGODB_URI = mongodb+srv://abenooo:IV0WRDceRqB1JCAZ@cluster0.znijpfk.mongodb.net/
+MONGODB_URI=mongodb+srv://abenooo:IV0WRDceRqB1JCAZ@cluster0.znijpfk.mongodb.net/e-learning?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_secure_jwt_secret
 JWT_EXPIRE=1h
 REFRESH_TOKEN_SECRET=your_secure_refresh_token_secret
