Add Cloudinary configuration details to .env file for image management integration.

--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@ JWT_SECRET=your_secure_jwt_secret
 JWT_EXPIRE=1h
 REFRESH_TOKEN_SECRET=your_secure_refresh_token_secret
 REFRESH_TOKEN_EXPIRE=7d
+
+# cloudiny detail Configurations 
+CLOUDINARY_CLOUD_NAME=dn2b9nmeu
+CLOUDINARY_API_KEY=215468378144765
+CLOUDINARY_API_SECRET=ITrxD0zt7cgDQAUWhVE6lvm_QSg
