--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
 # Dependencies
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 package-lock.json
 yarn.lock
 
 # Environment variables
 .env
 .env.local
-.env.development
-.env.test
-.env.production
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Build files
 dist/
@@ -81,8 +81,8 @@ typings/
 .parcel-cache
 
 # Next.js build output
-.next
-out
+.next/
+out/
 
 # Nuxt.js build / generate output
 .nuxt
@@ -126,3 +126,6 @@ public/uploads/
 *.pem
 *.key
 *.crt
+
+# Node.js
+.pnpm-store/
